[metadata]
name = mlad
maintainer = Takahiro Yoshinaga
maintainer_email = t.yoshinaga0106@gmail.com
version = 0.0.1
description = ML based Anomaly Detection
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
url = https://github.com/y-bar/ML-based-anomaly-detection

[options]
package_dir==.
packages=find:
install_requires =
  matplotlib
  numpy
  scipy
  sklearn
